--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,7 +5,7 @@ jdbc.password=wazll1314
  
 ###  站点配置  ###
 #域名
-web.domain=https://localhost:8080/api
+web.domain=https://www.jiujichina.com/api
 #是否开放注册
 web.openRegister=true
 #全文索引是否需要登陆才能使用
